--- a/generations/novee-lead-gen/apps/web/package.json
+++ b/generations/novee-lead-gen/apps/web/package.json
@@ -15,12 +15,14 @@
     "@supabase/supabase-js": "^2.39.0",
     "next": "15.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^11.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
