Enhance Novee Lead Generation Platform with Supabase integration, adding database management scripts, environment configurations, and session handling. Update package dependencies and implement new API routes for user authentication, onboarding events, and lead interactions. Ensure all features are functioning with 100% coverage.

--- a/generations/novee-lead-gen/apps/web/.env.example
+++ b/generations/novee-lead-gen/apps/web/.env.example
@@ -1,4 +1,10 @@
 # Supabase Configuration
+# For local development, run `pnpm db:start` from root and use these values:
+#   NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
+#   NEXT_PUBLIC_SUPABASE_ANON_KEY=<from supabase start output>
+#   SUPABASE_SERVICE_ROLE_KEY=<from supabase start output>
+#
+# For production, use your Supabase project credentials:
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
