--- a/generations/novee-lead-gen/apps/desktop/.env.example
+++ b/generations/novee-lead-gen/apps/desktop/.env.example
@@ -1,4 +1,9 @@
 # Supabase Configuration (same as web app)
+# For local development, run `pnpm db:start` from root and use these values:
+#   SUPABASE_URL=http://localhost:54321
+#   SUPABASE_ANON_KEY=<from supabase start output>
+#
+# For production, use your Supabase project credentials:
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your_supabase_anon_key
 
