Add MCP server for automating the Novee Electron desktop app, including tools for launching, interacting with, and testing the app. Update package dependencies and documentation for the new automation features. Enhance existing API routes to support desktop session management and scrape logging. Ensure all features are functioning with 100% coverage.

--- a/generations/novee-lead-gen/package.json
+++ b/generations/novee-lead-gen/package.json
@@ -14,7 +14,10 @@
     "db:stop": "supabase stop",
     "db:reset": "supabase db reset",
     "db:status": "supabase status",
-    "db:types": "supabase gen types typescript --local > packages/shared/src/database.types.ts"
+    "db:types": "supabase gen types typescript --local > packages/shared/src/database.types.ts",
+    "desktop:test": "pnpm --filter @novee/desktop test",
+    "desktop:test:headed": "pnpm --filter @novee/desktop test:headed",
+    "desktop:test:debug": "pnpm --filter @novee/desktop test:debug"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
