--- a/generations/novee-lead-gen/packages/shared/tsconfig.json
+++ b/generations/novee-lead-gen/packages/shared/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
-    "noEmit": false
+    "noEmit": false,
+    "incremental": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
