Update CLAUDE.md to clarify project structure and enhance documentation; modify .gitignore to track all generated projects; adjust client.py for improved desktop MCP tool integration.

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ venv/
 __pycache__/
 *.pyc
 
-# Novee project has its own git repository
-generations/novee-lead-gen/
+# Generated projects
+generations/
